--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -59,7 +59,13 @@
                             <outlet property="delegate" destination="Lsm-V6-VmM" id="wTe-Qy-GU1"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="zdW-z6-1AX"/>
+                    <navigationItem key="navigationItem" title="Users" id="zdW-z6-1AX">
+                        <barButtonItem key="rightBarButtonItem" title="Add Users" id="1bQ-Qi-f5Y">
+                            <connections>
+                                <action selector="addUserTapped:" destination="Lsm-V6-VmM" id="4H8-Dc-vQd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="03W-sE-udd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -74,41 +80,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tPe-f8-WUT">
-                                <rect key="frame" x="22.666666666666657" y="183.66666666666663" width="369" height="369"/>
+                                <rect key="frame" x="35" y="196" width="344" height="344"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tPe-f8-WUT" secondAttribute="height" multiplier="1:1" id="ob9-HN-kxm"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="pVL-4K-PbX">
-                                <rect key="frame" x="22.666666666666668" y="587.66666666666663" width="41.666666666666657" height="101"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pVL-4K-PbX">
+                                <rect key="frame" x="35" y="575" width="61.333333333333343" height="113.66666666666663"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIm-Dw-Cqt">
-                                        <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIm-Dw-Cqt">
+                                        <rect key="frame" x="0.0" y="0.0" width="61.333333333333336" height="34"/>
+                                        <fontDescription key="fontDescription" name="Palatino-Bold" family="Palatino" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vg5-Gb-Q1v">
-                                        <rect key="frame" x="0.0" y="40.333333333333371" width="41.666666666666664" height="20.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="40" width="61.333333333333336" height="33.666666666666657"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BL3-sH-LVK">
-                                        <rect key="frame" x="0.0" y="80.666666666666742" width="41.666666666666664" height="20.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BL3-sH-LVK">
+                                        <rect key="frame" x="0.0" y="79.666666666666629" width="61.333333333333336" height="34"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.82836587657932648" green="1" blue="0.97437575352099359" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="pVL-4K-PbX" firstAttribute="top" secondItem="tPe-f8-WUT" secondAttribute="bottom" constant="35" id="AEe-Hm-VAq"/>
                             <constraint firstItem="pVL-4K-PbX" firstAttribute="leading" secondItem="tPe-f8-WUT" secondAttribute="leading" id="HEe-US-8QJ"/>
                             <constraint firstItem="tPe-f8-WUT" firstAttribute="centerX" secondItem="niO-FV-IGR" secondAttribute="centerX" id="NpS-si-cbR"/>
                             <constraint firstItem="Vfg-0e-t3i" firstAttribute="bottom" secondItem="pVL-4K-PbX" secondAttribute="bottom" constant="47.5" id="SW5-ez-UlY"/>
+                            <constraint firstItem="tPe-f8-WUT" firstAttribute="leading" secondItem="Vfg-0e-t3i" secondAttribute="leading" constant="35" id="pZc-I0-k5H"/>
+                            <constraint firstItem="Vfg-0e-t3i" firstAttribute="trailing" secondItem="tPe-f8-WUT" secondAttribute="trailing" constant="35" id="rtf-fp-yuV"/>
                             <constraint firstItem="tPe-f8-WUT" firstAttribute="centerY" secondItem="niO-FV-IGR" secondAttribute="centerY" id="vhi-O7-DsA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Vfg-0e-t3i"/>
